--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,13 @@
 {
-  "buildCommand": "npm run build",
+  "buildCommand": "npm run build:all",
   "devCommand": "npm run dev:all",
   "installCommand": "npm install",
-  "framework": null,
+  "framework": "nextjs",
   "regions": ["iad1"],
   "rewrites": [
     {
-      "source": "/api/:path*",
-      "destination": "/api/:path*"
-    },
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
+      "source": "/((?!api|_next|.*\\..*).*)",
+      "destination": "/dist/index.html"
     }
   ]
 }
