--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,6 @@
 {
   "extends": ["next/core-web-vitals"],
-  "ignorePatterns": ["node_modules/", ".next/", "dist/", "src/"]
+  "ignorePatterns": ["node_modules/", ".next/", "dist/", "src/", "*.config.js", "*.config.cjs"]
 }
 
 
